--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179970654-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179970654-1');
+</script>
 <h1>Hello Neil!</h1>
 <h1>Neil is my friend.</h1>
 <h1>He had a baby recently.</h1>
